--- a/phs.html
+++ b/phs.html
@@ -251,9 +251,8 @@
             <div id="collapsefive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading">
                 <div class="panel-body" dir="rtl">
                     <center>
-                         الثابت = <code>0.0821</code>
-                        <br>
-                        P
+                        الثابت = <code>0.0821</code>
+                        <br> P
                         <br>
                         <input type="number" id="P" placeholder=" ادخل القيمه">
                         <br> V
@@ -283,36 +282,28 @@
                             <br> التعويض
                         </div>
                         <hr>
-                        <br>
-                        قانون الكتله الموليه
+                        <br> قانون الكتله الموليه
                         <br>
                         <code><var>M</var></code> = <code><var>mRT</var></code> / <code><var>PV</var></code>
-                        <br>
-                        M
+                        <br> M
                         <br>
                         <input type="number" id="M" placeholder="">
-                        <br>
-                        m
+                        <br> m
                         <br>
                         <input type="number" id="m" placeholder="">
-                        <br>
-                        R
+                        <br> R
                         <br>
                         <input type="number" id="R" placeholder="">
-                        <br>
-                        T
+                        <br> T
                         <br>
                         <input type="number" id="T" placeholder="">
-                        <br>
-                        P
+                        <br> P
                         <br>
                         <input type="number" id="P" placeholder="">
-                        <br>
-                        V
+                        <br> V
                         <br>
                         <input type="number" id="V" placeholder="">
-                        <br>
-                        =
+                        <br> =
                         <br>
                         <button class="buttom" onclick="Molarr()"> الحل</button>
                         <br>
@@ -327,34 +318,27 @@
                             <br> التعويض
                         </div>
                         <hr>
-                        <br>
-                        قانون كثافه الماده
+                        <br> قانون كثافه الماده
                         <br>
                         <code><var>D</var></code> = <code><var>MP</var></code> / <code><var>RT</var></code>
-                        <br>
-                        D
+                        <br> D
                         <br>
                         <input type="number" id="D" placeholder="">
-                        <br>
-                        M
+                        <br> M
                         <br>
                         <input type="number" id="MM" placeholder="">
-                        <br>
-                        P
+                        <br> P
                         <br>
                         <input type="number" id="PP" placeholder="">
-                        <br>
-                        R
+                        <br> R
                         <br>
                         <input type="number" id="R" placeholder="">
-                        <br>
-                        T
+                        <br> T
                         <br>
                         <input type="number" id="TT" placeholder="">
+                        <br> =
                         <br>
-                        =
-                        <br>
-                            <button class="buttom" onclick="Density()"> الحل</button>
+                        <button class="buttom" onclick="Density()"> الحل</button>
                         <br>
                         <br>
                         <font size="3">النتيجه </font>
