unit one is done . just try

--- a/ph2.html
+++ b/ph2.html
@@ -85,7 +85,7 @@
                         <input type="number" id="Km" placeholder="100">
                         <br> 
                         <br>
-                        <button class="buttom" onclick="kg()"> الحل</button>
+                        <button class="buttom" onclick="k()"> الحل</button>
                         <br>
                         <br>
                         <font size="3">النتيجه </font>
